@@ -86,7 +86,8 @@ scp to hosted
 PUG changes
 ######################################
 
-## Make sure JavaScript for popper and switchery are tidied up!!!
+## Make sure XML::TreeBuilder is bumped to 5.4 for the as_XML fix!!!
+## why don't DocBook4 entities resolve...
 
 Installing "Running publican from a GIT checkout"
 
